# mccl-node

./: .gitignore  Cargo.toml  README.md
src/: config_reader.rs  http_block_server.rs  main.rs  server_launcher.rs
src/functions/: config_reader.rs  connect_node.rs  host_node.rs  instances.rs  mod.rs  report_service.rs  server_launcher.rs
src/instance/: instances_reader.rs  mod.rs
src/pages/: mod.rs
src/pages/connect/: connect_node.rs  discovery.rs  index.rs  mod.rs
src/pages/home/: index.rs
src/pages/instance/: index.rs
src/screens/: connect_active.rs  home_menu.rs  instance_menu.rs  mod.rs  new_instance.rs  welcome.rs
src/services/: create_instance.rs  instances_reader.rs  mod.rs  server_launcher.rs
src/structs/: instance.rs  mod.rs  service.rs
src/utils/: config_reader.rs  mod.rs  open_link.rs  pause.rs
